// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/WorkpadFilters/FilterComponent default 1`] = `
<div
  className="canvasLayout__sidebar"
>
  <div
    className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--noShadow euiPanel--flexGrowZero"
  >
    <dl
      className="euiDescriptionList euiDescriptionList--column"
    >
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Type
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        exactly
      </dd>
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Column
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        project
      </dd>
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Value
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        kibana
      </dd>
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Filter group
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        Group 1
      </dd>
    </dl>
  </div>
</div>
`;

exports[`Storyshots components/WorkpadFilters/FilterComponent with component field 1`] = `
<div
  className="canvasLayout__sidebar"
>
  <div
    className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--noShadow euiPanel--flexGrowZero"
  >
    <dl
      className="euiDescriptionList euiDescriptionList--column"
    >
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Type
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        exactly
      </dd>
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Column
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        project
      </dd>
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Value
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        <div
          className="euiText euiText--medium"
        >
          <span
            className="euiTextColor euiTextColor--secondary"
            style={Object {}}
          >
            <h3>
              kibana
            </h3>
          </span>
        </div>
      </dd>
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Filter group
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        Group 1
      </dd>
    </dl>
  </div>
</div>
`;

exports[`Storyshots components/WorkpadFilters/FilterComponent with custom filter fields 1`] = `
<div
  className="canvasLayout__sidebar"
>
  <div
    className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--noShadow euiPanel--flexGrowZero"
  >
    <dl
      className="euiDescriptionList euiDescriptionList--column"
    >
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Type
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        exactly
      </dd>
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Column
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        project
      </dd>
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Value
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        kibana
      </dd>
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Filter group
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        Group 1
      </dd>
      <dt
        className="euiDescriptionList__title eui-textBreakWord"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        Custom Field
      </dt>
      <dd
        className="euiDescriptionList__description eui-textBreakWord"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        Some unknown field
      </dd>
    </dl>
  </div>
</div>
`;
